--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/elements": "^2.4.4",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
+    "firebase": "^11.10.0",
     "nstall": "^0.2.0",
     "react": "19.1.0",
     "react-native": "0.80.0",
