--- a/ios/DoctorAnonymous/Info.plist
+++ b/ios/DoctorAnonymous/Info.plist
@@ -49,5 +49,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow access to the photo library for selecting images</string>
 </dict>
 </plist>
