--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.4.0",
+    "@react-native-firebase/database": "^22.4.0",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/elements": "^2.4.4",
     "@react-navigation/native": "^7.1.11",
     "@react-navigation/native-stack": "^7.3.16",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-flash-message": "^0.4.2",
+    "react-native-image-picker": "^8.2.1",
+    "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
