--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,8 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=doctor-anonymous.keystore
+MYAPP_UPLOAD_KEY_ALIAS=doctor-anonymous
+MYAPP_UPLOAD_STORE_PASSWORD=Ojokamisrontolen1234
+MYAPP_UPLOAD_KEY_PASSWORD=Ojokamisrontolen1234
